Fix issue processwire/processwire-issues#415 where ProcessPageEditImageSelect was not showing variations for image when it was specified as one of the skipFields in module configuration.

--- a/wire/modules/Process/ProcessPageEditImageSelect/ProcessPageEditImageSelect.css
+++ b/wire/modules/Process/ProcessPageEditImageSelect/ProcessPageEditImageSelect.css
@@ -13,6 +13,7 @@
 #select_images a img {
 	border: 3px solid #fff; 
 	max-width: 100%; 
+	height: 130px;
 }
 
 #select_images a:hover img {
